fix: use qoutes for inline cateng-issue
Signed-off-by: AltF2 <contact@altf2.dev>

--- a/fcos-base-tmplt.yaml
+++ b/fcos-base-tmplt.yaml
@@ -273,13 +273,13 @@
     - path: /etc/console-login-helper-messages/issue.d/00_cateng.issue
       mode: 0644
       contents:
-        inline: |
+        inline: '
 
                 |\__/,|   (`\
               _.|o o  |_   ) )
             -(((---(((--------
             
-          .
+          '
 
 # kernel config
     - path: /etc/sysctl.d/20-silence-audit.conf
